2003-07-26  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c, pathname.d (hardlink_file, symlink_file):
	moved from pathname.d to calls.c

2003-07-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (CONFIGURES): added config.h.in in wildcard,
	regexp, dirkey and syscall, use autoheader to generate them
	* m4/cc-void.m4 (RL_VOID): fixed the AC_DEFINE call

2003-07-25  Sam Steingold  <sds@gnu.org>

	Converted syscall to a module
	* Makefile.devel (CONFIGURES): added syscalls
	* configure, makemake.in (--with-dir-key): removed option
	* modules/syscalls: new directory
	* genclisph.d: added some stuff to support syscalls
	* constobj.d, constpack.d, constsym.d, pathname.d, socket.d:
	* spvw.d, stream.d, subr.d, subrkw.d: removed syscall-specific stuff
	* pathname.d (if_does_not_exist_symbol, if_exists_symbol): added
	* socket.d (addr_to_string, resolve_host1, resolve_host): added
	* stream.d (file_stream_truename, open_file_stream_handle): added
	* posix.lisp, posixmath.d, posixmisc.d: removed

2003-07-25  Sam Steingold  <sds@gnu.org>

	* modprep.c: DEFUN can specify side-effect-class

2003-07-25  Sam Steingold  <sds@gnu.org>

	* error.d (check_posfixnum): new function
	* io.d (PPRINT-INDENT): use check_real()
	* lisparit.d (fehler_not_N): replaced with check_number()
	(fehler_not_R): replaced with check_real()
	(fehler_not_F): replaced with check_float()
	(fehler_not_RA): replaced with check_rational()
	(fehler_not_I): replaced with check_integer()
	(to_double, to_int): new functions for modules
	made these changes pervasive in the whole file
	* lispbib.d (fehler_not_R): replaced with check_real()
	(check_posfixnum): declared

2003-07-24  Sam Steingold  <sds@gnu.org>

	* genclisph.d (SAFETY): export
	(type_data_object): fixed (now fixnum() works)
	(svector_): fixed (now TheSvector()->data works)
	(symbolp): uncommented
	(stringp): fixed
	(array_displace_check): replaces iarray_displace_check()
	* dirkey.c (SET-DKEY-VALUE): use array_displace_check() instead